# starting-ragchatbot-codebase

./: .env.example  .flake8  .gitignore  .pylintrc  ARCHITECTURE_DIAGRAM.md  CLAUDE.md  FLOW_DIAGRAM.md  HYBRID_APPROACH_PLAN.md  QUERY_FLOW_TRACE.md  QUICKSTART.md  README.md  TESTING.md  backend-changes.md  backend-tool-refactor.md  frontend-changes.md  pyproject.toml  run.ps1  run.sh  smoke_test_integration.py  smoke_test_ui.py
.claude/commands/: implement-feature.md
backend/: ai_generator.py  app.py  rag_system.py  search_tools.py  vector_store.py
backend/tests/: BUG_FIX_SUMMARY.md  BUG_REPORT_MAX_RESULTS.md  COMPLETE_SUMMARY.md  README.md  TEST_REPORT.md  conftest.py  requirements-test.txt  test_ai_generator.py  test_api_endpoints.py  test_edge_cases.py  test_rag_system.py  test_search_tools.py
frontend/: claude-integration.js  index.html  script.js  style.css
frontend/tests/: README.md  run_all_tests.py  test_chat_functionality.py  test_theme_toggle.py  test_ui_components.py
scripts/: format.ps1  format.sh  lint.ps1  lint.sh  quality_check.ps1  quality_check.sh
